objects/ExternalReport__c.object
<CustomObject>
    <description>Will Hold Name of the Reports</description>
    <fields>
        <fullName>Available_for_Use__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Available for Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Level__c</fullName>
        <description>specifies where the report can appear in the list</description>
        <label>Display Level</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>SSD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCRM_Is_GLI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Using 3 attributes (Sub-BU, Is GLI and Display Level) to display the reports links(CRM-6396).</description>
        <label>Is GLI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LCRM_SUB_BU__c</fullName>
        <description>Using 3 attributes (Sub-BU, Is GLI and Display Level) to display the reports links.</description>
        <label>Sub-BU</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USL</fullName>
                </value>
                <value>
                    <fullName>LMS</fullName>
                </value>
                <value>
                    <fullName>FindLaw</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>AEM</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>Enter Location of the Report
Example - File S/m
\\eg-mdbweb-a01\LargeLawProfiles\RevPerf
OBIEE - https://obi.thomsonreuters.com/analytics/saw.dll?Dashboard</inlineHelpText>
        <label>Location</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Report_System_Name__c</fullName>
        <label>Report System Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Type__c</fullName>
        <label>System Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Webservice</fullName>
                </value>
                <value>
                    <fullName>Webapplication</fullName>
                </value>
                <value>
                    <fullName>Filesystem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sort_Order__c</fullName>
        <defaultValue>999</defaultValue>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ExternalReport</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ExternalReport Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ExternalReports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>